Small fixes to align design more towards figma file

--- a/frontend/src/styles/ForgotPassword.css
+++ b/frontend/src/styles/ForgotPassword.css
@@ -6,19 +6,30 @@
     background-color: white;
     box-shadow: 0 4px 8px lightgrey; 
     width: 500px;
-    padding: 15px; /* Edits how close elements are to the edge of the div. */
+    padding: 20px; /* Edits how close elements are to the edge of the div. */
     border-radius: 10px; /* Edits roundness of the div. */
-    margin: 20px 0px 0px 20px; /* Edits how close the div is to the edge of the screen. */
+    margin: 30px 0px 0px 30px; /* Edits how close the div is to the edge of the screen. */
 }
 
-.input-field {
+.fp-input-field {
     width: 400px;
     height: 48px;
     padding-left: 18px;
     border-radius: 5px;
     font-size: 16px;
-    margin: 0px 0px 20px 0px;
+    margin: 20px 0px 20px 0px;
 }
+
+.fp-sub-text {
+    font-family: Helvetica;
+    font-weight: 400;
+    font-size: 16px;
+    text-align: center;
+    padding-left: 18px;
+    padding-right: 18px;
+    margin: 0px 0px 15px 0px;
+}
+
 
 .button-container {
     display: flex;
@@ -34,5 +45,5 @@
     border: none;
     width: 120px;
     height: 40px;
-    margin: 10px 0px 0px 0px;
+    margin: 10px 0px -40px 0px;
 }
