--- a/frontend/src/styles/Privacy.css
+++ b/frontend/src/styles/Privacy.css
@@ -24,7 +24,7 @@
     align-items: center;
 }
 
-.input-field {
+.p-input-field {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -34,6 +34,15 @@
     padding-left: 18px;
     border-radius: 5px;
     font-size: 16px;
+    margin: 20px 0px 20px 0px;
+}
+
+.p-sub-heading {
+    font-family: Helvetica;
+    font-weight: 400;
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 25px;
     margin: 0px 0px 20px 0px;
 }
 
