--- a/frontend/src/styles/registration.css
+++ b/frontend/src/styles/registration.css
@@ -12,9 +12,9 @@
     background-color: white;
     box-shadow: 0 4px 8px lightgrey; 
     width: 500px;
-    padding: 30px 175px 30px 175px; /* Edits how close elements are to the edge of the div. */
+    padding: 25px 125px 25px 125px; /* Edits how close elements are to the edge of the div. */
     border-radius: 10px; /* Edits roundness of the div. */
-    margin: 20px 0px 0px 0px; /* Edits how close the div is to the edge of the screen. */
+    margin: 30px 0px 0px 0px; /* Edits how close the div is to the edge of the screen. */
 }
 
 .verification-page {
@@ -25,9 +25,9 @@
     background-color: white;
     box-shadow: 0 4px 8px lightgrey; 
     width: 500px;
-    padding: 30px 100px 30px 100px; /* Edits how close elements are to the edge of the div. */
+    padding: 30px 50px 30px 50px; /* Edits how close elements are to the edge of the div. */
     border-radius: 10px; /* Edits roundness of the div. */
-    margin: 20px 0px 0px 0px; /* Edits how close the div is to the edge of the screen. */
+    margin: 30px 0px 0px 0px; /* Edits how close the div is to the edge of the screen. */
 }
 
 .form-container {
@@ -85,4 +85,12 @@
     height: 35px;
     padding: 0px;
     margin: 0px 0px 0px 10px;
+}
+
+.login-required-message {
+    font-family: Helvetica;
+    font-size: 14px;
+    color: red;
+    padding-left: 20px;
+    margin: -5px 0px 15px 38px;
 }
