--- a/frontend/src/styles/resetpassword.css
+++ b/frontend/src/styles/resetpassword.css
@@ -8,7 +8,7 @@
     width: 500px;
     padding: 15px; /* Edits how close elements are to the edge of the div. */
     border-radius: 10px; /* Edits roundness of the div. */
-    margin: 20px 0px 0px 20px; /* Edits how close the div is to the edge of the screen. */
+    margin: 30px 0px 0px 30px; /* Edits how close the div is to the edge of the screen. */
 }
 
 .input-field {
@@ -18,6 +18,15 @@
     border-radius: 5px;
     font-size: 16px;
     margin: 0px 0px 20px 0px;
+
+}
+
+.rp-sub-text {
+    font-family: Helvetica;
+    font-weight: 400;
+    font-size: 16px;
+    text-align: center;
+    margin: 0px 0px 25px 0px;
 }
 
 .button-container {
@@ -34,5 +43,5 @@
     border: none;
     width: 175px;
     height: 40px;
-    margin: 10px 0px 0px 0px;
+    margin: 10px 0px -40px 0px;
 }
